name:                miso-stm
version:             0.1.1.0
build-type:          Simple
license:             OtherLicense
license-file:        LICENSE
author:              oofp
maintainer:          oofp
copyright:           2018-2020 oofp
category:            Control
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:        -Wall 
  exposed-modules:
      Miso.STM.MisoSTM
  other-modules:
      Miso.STM.BoundView
      Miso.STM.ViewHelpers
      Miso.STM.BoundApp
  hs-source-dirs:
      src
  default-extensions: RecordWildCards OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , jsaddle
    , jsaddle-warp
    , miso
    , stm
    , stm-containers >=1.1.0.2
    , async
    , text
  default-language: Haskell2010

executable miso-stm-exe
  ghc-options:        -Wall 
  main-is: StmMainBoot.hs
  other-modules:
  hs-source-dirs:
      Examples
  default-extensions: RecordWildCards OverloadedStrings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jsaddle
    , jsaddle-warp
    , miso
    , miso-stm
    , stm
    , stm-containers >=1.1.0.2
    , async
    , text
  default-language: Haskell2010

executable miso-counter-exe
  ghc-options:        -Wall 
  main-is: StmCounter.hs
  other-modules:
  hs-source-dirs:
      Examples
  default-extensions: RecordWildCards OverloadedStrings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jsaddle
    , jsaddle-warp
    , miso
    , miso-stm
    , stm
    , stm-containers >=1.1.0.2
    , async
    , text
  default-language: Haskell2010

